--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "csstype": "^3.1.3",
     "dom-helpers": "^5.2.1",
     "js-tokens": "^4.0.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "loose-envify": "^1.4.0",
     "object-assign": "^4.1.1",
+    "papaparse": "^5.5.2",
     "prettier": "^3.3.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
